project: remove java 10 incompat jvm settings